@@ -9,7 +9,7 @@ GNU as \- the portable GNU assembler.
 .na
 .B as
 .RB "[\|" \-a "[\|" dhlns "\|]" \c
-\&\[\|\=\c
+\&[\|\=\c
 .I file\c
 \&\|]\|]
 .RB "[\|" \-D "\|]"
